--- a/css/style.css
+++ b/css/style.css
@@ -69,15 +69,28 @@ body {
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(150px,1fr));
+  grid-template-columns: repeat(auto-fill, minmax(180px,1fr));
   gap: 20px;
 }
 
 .card {
   background: rgba(255,255,255,0.2);
-  padding: 40px;
+  padding: 15px;
   border-radius: 20px;
   text-align: center;
   backdrop-filter: blur(10px);
   cursor: pointer;
+}
+
+.card img {
+  width: 100%;
+  height: 140px;
+  object-fit: cover;
+  border-radius: 15px;
+  margin-bottom: 10px;
+}
+
+.game-title {
+  font-size: 18px;
+  font-weight: bold;
 }
