--- a/css/style.css
+++ b/css/style.css
@@ -538,7 +538,7 @@ body.prty {
 
 .proxy-container {
   width: 100%;
-  height: 80vh;
+  height: calc(100vh - 120px); /* fills screen under header */
   margin-top: 20px;
   border-radius: 16px;
   overflow: hidden;
@@ -552,5 +552,7 @@ body.prty {
   border: none;
   background: #000;
 }
+
+
 
 
